unpackaged/main/default/objects/sked_Fixed_Site_Procedure_Projection__c/sked_Fixed_Site_Procedure_Projection__c.object-meta.xml
<CustomObject>
    <label>Fixed Site Procedure Projection</label>
    <nameField>
        <displayFormat>FSPP-{000000}</displayFormat>
        <label>Fixed Site Procedure Projection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fixed Site Procedure Projections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>