unpackaged/main/default/objects/sked_Fixed_Site_Procedure_Projection__c/fields/sked_Impact_Drives__c.field-meta.xml
<CustomField>
    <fullName>sked_Impact_Drives__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Impact Drives</label>
    <type>Checkbox</type>
</CustomField>