unpackaged/main/default/objects/sked_Fixed_Site_Procedure_Projection__c/fields/sked_Productive_Procedure_Goal__c.field-meta.xml
<CustomField>
    <fullName>sked_Productive_Procedure_Goal__c</fullName>
    <label>Productive Procedure Goal</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>