unpackaged/main/default/objects/sked_Fixed_Site_Procedure_Projection__c/fields/sked_QNS__c.field-meta.xml
<CustomField>
    <fullName>sked_QNS__c</fullName>
    <label>QNS %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>